[gd_scene load_steps=28 format=3 uid="uid://c4p3lh050mkt5"]

[ext_resource type="Script" path="res://select_level_for_add.gd" id="1_mrkaw"]
[ext_resource type="Texture2D" uid="uid://druewnsj8ytan" path="res://darkblue.jpg" id="2_xi88g"]
[ext_resource type="Texture2D" uid="uid://coq1n6sqntla6" path="res://1000055590.png" id="3_rfq2l"]
[ext_resource type="Texture2D" uid="uid://dx7c5tuxmwhu8" path="res://1000055703.png" id="4_wklk8"]
[ext_resource type="Texture2D" uid="uid://w7bjgqvkdpc8" path="res://1000057464.png" id="5_3vwks"]
[ext_resource type="Texture2D" uid="uid://csn7syebi8mhh" path="res://Untitled175_20241123122249-removebg-preview.png" id="6_585pf"]
[ext_resource type="Texture2D" uid="uid://b2u8usii21mr3" path="res://1000057467.png" id="7_hsmxb"]
[ext_resource type="Texture2D" uid="uid://bbut2v62lvcbd" path="res://Untitled176_20241123122353-removebg-preview.png" id="8_t3w28"]
[ext_resource type="Texture2D" uid="uid://dvijyck0faydj" path="res://1000057468.png" id="9_4yiyj"]
[ext_resource type="Texture2D" uid="uid://b0ss6u4o6a7hy" path="res://Untitled177_20241123122447-removebg-preview.png" id="10_8pmnl"]
[ext_resource type="Texture2D" uid="uid://dbi4pj4n2rlv3" path="res://ezgif-5-9dd494be6f.png" id="11_dacly"]
[ext_resource type="Script" path="res://select mode level.gd" id="12_2grmj"]
[ext_resource type="Texture2D" uid="uid://c4ie4vjpchhh6" path="res://Untitled184_20241125172611.png" id="13_oyqca"]
[ext_resource type="Texture2D" uid="uid://dieh1mwn2xnt2" path="res://1000057607.png" id="14_wfuwl"]
[ext_resource type="Texture2D" uid="uid://do4uhcykwrl84" path="res://1000057575.png" id="15_1rnq6"]
[ext_resource type="FontFile" uid="uid://538ikfc3yvly" path="res://Jersey10-Regular.ttf" id="15_215x3"]
[ext_resource type="Texture2D" uid="uid://c6dvxaaq4k2lt" path="res://Untitled187_20241124194456.png" id="16_akeam"]
[ext_resource type="Texture2D" uid="uid://cvvweyg6d4b7w" path="res://Untitled187_20241124194712.png" id="17_w4w13"]
[ext_resource type="Texture2D" uid="uid://2e4c66g2qf0s" path="res://1000057685-removebg-preview.png" id="17_x6dxs"]
[ext_resource type="Texture2D" uid="uid://d2tplkmdiwchl" path="res://1000057686-removebg-preview.png" id="19_s436v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1okq6"]
texture = ExtResource("2_xi88g")

[sub_resource type="Animation" id="Animation_cqam0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qo82h"]
resource_name = "Select Level"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ab5o"]
_data = {
"RESET": SubResource("Animation_cqam0"),
"Select Level": SubResource("Animation_qo82h")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xalwk"]
texture = ExtResource("13_oyqca")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tk8ol"]
texture = ExtResource("15_1rnq6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mg80n"]
texture = ExtResource("14_wfuwl")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mrkaw")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.000654414
theme_override_styles/panel = SubResource("StyleBoxTexture_1okq6")

[node name="Back" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 55.0
offset_top = 74.0
offset_right = 305.0
offset_bottom = 224.0
texture_normal = ExtResource("3_rfq2l")
texture_pressed = ExtResource("4_wklk8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -116.0
offset_right = 200.0
offset_bottom = 674.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Easy" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_3vwks")
texture_pressed = ExtResource("6_585pf")

[node name="Medium" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("7_hsmxb")
texture_pressed = ExtResource("8_t3w28")

[node name="Hard" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("9_4yiyj")
texture_pressed = ExtResource("10_8pmnl")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer2"]
position = Vector2(26, -366)
scale = Vector2(1.265, 1.265)
texture = ExtResource("11_dacly")
vframes = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer2/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_0ab5o")
}
script = ExtResource("12_2grmj")

[node name="Confirmation Dialogue easy" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.5
offset_top = -224.0
offset_right = 490.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xalwk")

[node name="banner" type="Panel" parent="Confirmation Dialogue easy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.5
offset_top = -529.0
offset_right = 529.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tk8ol")

[node name="are u ready" type="Panel" parent="Confirmation Dialogue easy/banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -137.0
offset_right = 340.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mg80n")

[node name="Label" type="Label" parent="Confirmation Dialogue easy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.5
offset_top = -173.0
offset_right = 386.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
theme_override_fonts/font = ExtResource("15_215x3")
theme_override_font_sizes/font_size = 65
text = "You are given 12 seconds
to answer each of the problems
in the selected operation."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Confirmation Dialogue easy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = 184.0
offset_right = 325.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="yes for easy" type="TextureButton" parent="Confirmation Dialogue easy/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("16_akeam")
texture_pressed = ExtResource("17_x6dxs")

[node name="no for easy" type="TextureButton" parent="Confirmation Dialogue easy/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("17_w4w13")
texture_pressed = ExtResource("19_s436v")

[node name="Confirmation Dialogue medium" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.5
offset_top = -224.0
offset_right = 490.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xalwk")

[node name="banner" type="Panel" parent="Confirmation Dialogue medium"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.5
offset_top = -529.0
offset_right = 529.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tk8ol")

[node name="are u ready" type="Panel" parent="Confirmation Dialogue medium/banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -137.0
offset_right = 340.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mg80n")

[node name="Label" type="Label" parent="Confirmation Dialogue medium"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.5
offset_top = -173.0
offset_right = 386.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
theme_override_fonts/font = ExtResource("15_215x3")
theme_override_font_sizes/font_size = 65
text = "You are given 12 seconds
to answer each of the problems
in the selected operation."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Confirmation Dialogue medium"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = 184.0
offset_right = 325.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="yes for medium" type="TextureButton" parent="Confirmation Dialogue medium/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("16_akeam")
texture_pressed = ExtResource("17_x6dxs")

[node name="no for medium" type="TextureButton" parent="Confirmation Dialogue medium/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("17_w4w13")
texture_pressed = ExtResource("19_s436v")

[node name="Confirmation Dialogue hard" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.5
offset_top = -224.0
offset_right = 490.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xalwk")

[node name="banner" type="Panel" parent="Confirmation Dialogue hard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.5
offset_top = -529.0
offset_right = 529.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tk8ol")

[node name="are u ready" type="Panel" parent="Confirmation Dialogue hard/banner"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -137.0
offset_right = 340.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mg80n")

[node name="Label" type="Label" parent="Confirmation Dialogue hard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.5
offset_top = -173.0
offset_right = 386.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
theme_override_fonts/font = ExtResource("15_215x3")
theme_override_font_sizes/font_size = 65
text = "You are given 12 seconds
to answer each of the problems
in the selected operation."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Confirmation Dialogue hard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = 184.0
offset_right = 325.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="yes for hard" type="TextureButton" parent="Confirmation Dialogue hard/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("16_akeam")
texture_pressed = ExtResource("17_x6dxs")

[node name="no for hard" type="TextureButton" parent="Confirmation Dialogue hard/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("17_w4w13")
texture_pressed = ExtResource("19_s436v")

[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Back" to="Panel/Back" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Confirmation Dialogue easy/HBoxContainer/yes for easy" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Confirmation Dialogue easy/HBoxContainer/no for easy" to="." method="_on_no_for_easy_pressed"]
[connection signal="pressed" from="Confirmation Dialogue easy/HBoxContainer/no for easy" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Confirmation Dialogue medium/HBoxContainer/yes for medium" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Confirmation Dialogue medium/HBoxContainer/no for medium" to="." method="_on_no_for_easy_pressed"]
[connection signal="pressed" from="Confirmation Dialogue medium/HBoxContainer/no for medium" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Confirmation Dialogue hard/HBoxContainer/yes for hard" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Confirmation Dialogue hard/HBoxContainer/no for hard" to="." method="_on_no_for_easy_pressed"]
[connection signal="pressed" from="Confirmation Dialogue hard/HBoxContainer/no for hard" to="." method="_on_no_pressed"]
